@@ -18,9 +18,7 @@
  */
 package org.apache.pinot.spi.stream;
 
-import com.google.common.collect.ImmutableSet;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 import javax.annotation.Nullable;
@@ -28,40 +26,45 @@ import org.apache.pinot.spi.data.readers.GenericRow;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
+import static org.mockito.Mockito.mock;
+
 
 public class StreamDataDecoderImplTest {
   private static final String NAME_FIELD = "name";
   private static final String AGE_HEADER_KEY = "age";
-  private static final String SEQNO_RECORD_METADATA = "seqNo";
+  private static final String SEQ_NO_RECORD_METADATA = "seqNo";
+  private static final StreamMessageMetadata METADATA = mock(StreamMessageMetadata.class);
 
   @Test
-  public void testDecodeValueOnly()
-      throws Exception {
+  public void testDecodeValueOnly() {
     TestDecoder messageDecoder = new TestDecoder();
-    messageDecoder.init(Collections.emptyMap(), ImmutableSet.of(NAME_FIELD), "");
+    messageDecoder.init(Map.of(), Set.of(NAME_FIELD), "");
     String value = "Alice";
-    BytesStreamMessage message = new BytesStreamMessage(value.getBytes(StandardCharsets.UTF_8));
+    BytesStreamMessage message = new BytesStreamMessage(value.getBytes(StandardCharsets.UTF_8), METADATA);
     StreamDataDecoderResult result = new StreamDataDecoderImpl(messageDecoder).decode(message);
     Assert.assertNotNull(result);
     Assert.assertNull(result.getException());
     Assert.assertNotNull(result.getResult());
 
     GenericRow row = result.getResult();
-    Assert.assertEquals(row.getFieldToValueMap().size(), 1);
+    Assert.assertEquals(row.getFieldToValueMap().size(), 2);
     Assert.assertEquals(String.valueOf(row.getValue(NAME_FIELD)), value);
+    Assert.assertEquals(row.getValue(StreamDataDecoderImpl.RECORD_SERIALIZED_VALUE_SIZE_KEY), value.length());
   }
 
   @Test
-  public void testDecodeKeyAndHeaders()
-      throws Exception {
+  public void testDecodeKeyAndHeaders() {
     TestDecoder messageDecoder = new TestDecoder();
-    messageDecoder.init(Collections.emptyMap(), ImmutableSet.of(NAME_FIELD), "");
+    messageDecoder.init(Map.of(), Set.of(NAME_FIELD), "");
     String value = "Alice";
     String key = "id-1";
     GenericRow headers = new GenericRow();
     headers.putValue(AGE_HEADER_KEY, 3);
-    Map<String, String> recordMetadata = Collections.singletonMap(SEQNO_RECORD_METADATA, "1");
-    StreamMessageMetadata metadata = new StreamMessageMetadata(1234L, headers, recordMetadata);
+    StreamMessageMetadata metadata = new StreamMessageMetadata.Builder().setRecordIngestionTimeMs(1234L)
+        .setOffset(new LongMsgOffset(0), new LongMsgOffset(1))
+        .setHeaders(headers)
+        .setMetadata(Map.of(SEQ_NO_RECORD_METADATA, "1"))
+        .build();
     BytesStreamMessage message =
         new BytesStreamMessage(key.getBytes(StandardCharsets.UTF_8), value.getBytes(StandardCharsets.UTF_8), metadata);
 
@@ -75,28 +78,26 @@ public class StreamDataDecoderImplTest {
     Assert.assertEquals(row.getValue(NAME_FIELD), value);
     Assert.assertEquals(row.getValue(StreamDataDecoderImpl.KEY), key, "Failed to decode record key");
     Assert.assertEquals(row.getValue(StreamDataDecoderImpl.HEADER_KEY_PREFIX + AGE_HEADER_KEY), 3);
-    Assert.assertEquals(row.getValue(StreamDataDecoderImpl.METADATA_KEY_PREFIX + SEQNO_RECORD_METADATA), "1");
+    Assert.assertEquals(row.getValue(StreamDataDecoderImpl.METADATA_KEY_PREFIX + SEQ_NO_RECORD_METADATA), "1");
     Assert.assertEquals(row.getValue(StreamDataDecoderImpl.RECORD_SERIALIZED_VALUE_SIZE_KEY), value.length());
   }
 
   @Test
-  public void testNoExceptionIsThrown()
-      throws Exception {
+  public void testNoExceptionIsThrown() {
     ThrowingDecoder messageDecoder = new ThrowingDecoder();
-    messageDecoder.init(Collections.emptyMap(), ImmutableSet.of(NAME_FIELD), "");
+    messageDecoder.init(Map.of(), Set.of(NAME_FIELD), "");
     String value = "Alice";
-    BytesStreamMessage message = new BytesStreamMessage(value.getBytes(StandardCharsets.UTF_8));
+    BytesStreamMessage message = new BytesStreamMessage(value.getBytes(StandardCharsets.UTF_8), METADATA);
     StreamDataDecoderResult result = new StreamDataDecoderImpl(messageDecoder).decode(message);
     Assert.assertNotNull(result);
     Assert.assertNotNull(result.getException());
     Assert.assertNull(result.getResult());
   }
 
-  class ThrowingDecoder implements StreamMessageDecoder<byte[]> {
+  private static class ThrowingDecoder implements StreamMessageDecoder<byte[]> {
 
     @Override
-    public void init(Map<String, String> props, Set<String> fieldsToRead, String topicName)
-        throws Exception {
+    public void init(Map<String, String> props, Set<String> fieldsToRead, String topicName) {
     }
 
     @Nullable
@@ -108,24 +109,21 @@ public class StreamDataDecoderImplTest {
     @Nullable
     @Override
     public GenericRow decode(byte[] payload, int offset, int length, GenericRow destination) {
-      return decode(payload, destination);
+      throw new RuntimeException("something failed during decoding");
     }
   }
 
-  class TestDecoder implements StreamMessageDecoder<byte[]> {
+  private static class TestDecoder implements StreamMessageDecoder<byte[]> {
     @Override
-    public void init(Map<String, String> props, Set<String> fieldsToRead, String topicName)
-        throws Exception {
+    public void init(Map<String, String> props, Set<String> fieldsToRead, String topicName) {
     }
 
-    @Nullable
     @Override
     public GenericRow decode(byte[] payload, GenericRow destination) {
       destination.putValue(NAME_FIELD, new String(payload, StandardCharsets.UTF_8));
       return destination;
     }
 
-    @Nullable
     @Override
     public GenericRow decode(byte[] payload, int offset, int length, GenericRow destination) {
       return decode(payload, destination);
